--- a/UFS-DC-Chef-CRM-App/Src/In Call Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In Call Screen.fx.yaml
@@ -2282,6 +2282,203 @@
                                                 RadiusTopRight: =4
                                                 ZIndex: =2
 
+                                                Gallery1_21 As gallery.variableTemplateHeightGallery:
+                                                    BorderColor: =RGBA(247, 162, 119, 1)
+                                                    DelayItemLoading: =true
+                                                    Fill: =RGBA(237, 237, 237, 1)
+                                                    Height: =40
+                                                    Items: =Filter(Col_NumberOfAddedSKUs,Id = ThisItem.Id)
+                                                    Layout: =Layout.Vertical
+                                                    LayoutMinHeight: =287
+                                                    LayoutMinWidth: =0
+                                                    LoadingSpinner: =LoadingSpinner.Data
+                                                    TemplatePadding: =2
+                                                    TemplateSize: =40
+                                                    Width: =249
+                                                    X: =315
+                                                    ZIndex: =1
+
+                                                    Container22_12 As groupContainer.horizontalAutoLayoutContainer:
+                                                        Height: =32
+                                                        LayoutGap: =3
+                                                        LayoutMode: =LayoutMode.Auto
+                                                        PaddingLeft: =2
+                                                        PaddingRight: =2
+                                                        PaddingTop: =2
+                                                        Width: =Parent.TemplateWidth
+                                                        X: |-
+                                                            =/*If('In Call Screen'.Size <4,112,
+                                                             Parent.TemplateWidth - (Parent.TemplateWidth/1.25))*/
+                                                        ZIndex: =4
+
+                                                        Label6 As label:
+                                                            Align: =Align.Center
+                                                            BorderColor: =RGBA(131, 24, 75, 1)
+                                                            Color: =RGBA(0, 0, 0, 1)
+                                                            DisabledColor: =RGBA(166, 166, 166, 1)
+                                                            FillPortions: =0.7
+                                                            FontWeight: =FontWeight.Semibold
+                                                            Height: =Parent.Height-1
+                                                            LayoutMinWidth: =0
+                                                            Size: =8
+                                                            Text: ="SKU Name"
+                                                            ZIndex: =1
+
+                                                        Container24_2 As groupContainer.manualLayoutContainer:
+                                                            AlignInContainer: =AlignInContainer.Start
+                                                            BorderColor: =RGBA(189, 49, 51, 1)
+                                                            Height: =Parent.Height-1
+                                                            LayoutMinHeight: =100
+                                                            LayoutMinWidth: =0
+                                                            Width: =Parent.Width - 80
+                                                            ZIndex: =2
+
+                                                            ComboBox7_5 As combobox:
+                                                                BorderColor: =RGBA(139, 154, 159, 1)
+                                                                ChevronBackground: =RGBA(247, 247, 247, 1)
+                                                                ChevronDisabledBackground: =RGBA(166, 166, 166, 1)
+                                                                ChevronDisabledFill: =RGBA(244, 244, 244, 1)
+                                                                ChevronFill: =RGBA(0, 0, 0, 1)
+                                                                ChevronHoverBackground: =ColorFade(Self.BorderColor, -20%)
+                                                                ChevronHoverFill: =RGBA(255, 255, 255, 1)
+                                                                DefaultSelectedItems: =
+                                                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                                                DisplayFields: =["ulchef_name"]
+                                                                DisplayMode: |-
+                                                                    =If(
+                                                                        IsBlank(ComboBox4_14.Selected) || IsBlank(Dropdown4_4.Selected),
+                                                                        DisplayMode.Disabled,
+                                                                        ComboBox4_14.Selected.Name = "Other" && IsBlank(TextInput4_13.Text),
+                                                                        DisplayMode.Disabled,
+                                                                        DisplayMode.Edit
+                                                                    )
+                                                                FocusedBorderThickness: =1
+                                                                Height: =26
+                                                                HoverColor: =RGBA(0, 0, 0, 1)
+                                                                HoverFill: =RGBA(214, 221, 224, 1)
+                                                                IsSearchable: =false
+                                                                Items: =SortByColumns(_Col_AllSKUs,"ulchef_name",SortOrder.Ascending)
+                                                                OnChange: |
+                                                                    =Patch(
+                                                                        Col_NumberOfAddedSKUs,
+                                                                        LookUp(
+                                                                            Col_NumberOfAddedSKUs,
+                                                                            ThisItem.SndID = SndID
+                                                                        ),
+                                                                        {
+                                                                            sku: Self.Selected.Name,
+                                                                            DishType:  Dropdown4.Selected.Value, //FeedBackTxtInput.Text,
+                                                                            PackSize: Self.Selected.'Pack Size',
+                                                                            PiecePrice: Self.Selected.'Piece Price',
+                                                                            CasePrice: Self.Selected.'Case Price',
+                                                                            Type: Dropdown4.Selected.Value, //Self.Selected.Type,
+                                                                            dish: If(
+                                                                                ComboBox4_2.Selected.Name = "Other",
+                                                                                TextInput4_4.Text,
+                                                                                ComboBox4_2.Selected.Name
+                                                                            )
+                                                                        }
+                                                                    );
+                                                                PressedColor: =RGBA(255, 255, 255, 1)
+                                                                PressedFill: =RGBA(106, 122, 127, 1)
+                                                                SearchFields: =["ulchef_name"]
+                                                                SearchItems: =[]
+                                                                SelectionFill: =RGBA(214, 221, 224, 1)
+                                                                SelectMultiple: =false
+                                                                Size: =10
+                                                                Width: =TextInput4_13.Width+32
+                                                                X: =1
+                                                                Y: =2
+                                                                ZIndex: =3
+
+                                                            TextInput4_13 As text:
+                                                                BorderColor: =RGBA(131, 24, 75, 1)
+                                                                BorderThickness: =0
+                                                                Color: =If(IsBlank(ThisItem.sku),RGBA(166,166,166,1),RGBA(0, 0, 0, 1))
+                                                                Default: =ThisItem.sku
+                                                                DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                                                DisabledColor: =RGBA(166, 166, 166, 1)
+                                                                DisabledFill: =RGBA(244, 244, 244, 1)
+                                                                DisplayMode: =DisplayMode.View
+                                                                FocusedBorderThickness: =4
+                                                                Height: =26
+                                                                HoverBorderColor: =RGBA(139, 154, 159, 1)
+                                                                HoverColor: =RGBA(0, 0, 0, 1)
+                                                                HoverFill: =RGBA(214, 221, 224, 1)
+                                                                OnChange: =
+                                                                RadiusBottomLeft: =0
+                                                                RadiusBottomRight: =0
+                                                                RadiusTopLeft: =0
+                                                                RadiusTopRight: =0
+                                                                Size: =10
+                                                                Width: =Parent.Width-34
+                                                                X: =1
+                                                                Y: =2
+                                                                ZIndex: =4
+
+                                                        Icon7_14 As icon.Add:
+                                                            AlignInContainer: =AlignInContainer.Center
+                                                            BorderColor: =RGBA(131, 24, 75, 1)
+                                                            Color: =RGBA(0, 176, 80, 1)
+                                                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                                            DisabledColor: =RGBA(244, 244, 244, 1)
+                                                            DisplayMode: =If(IsBlank(ThisItem.sku),DisplayMode.Disabled, DisplayMode.Edit)
+                                                            FocusedBorderThickness: =0
+                                                            Height: =20
+                                                            Icon: =Icon.Add
+                                                            OnSelect: |-
+                                                                =Collect(
+                                                                    Col_NumberOfAddedSKUs,
+                                                                    {
+                                                                        Id: ThisItem.Id,
+                                                                        SndID: ThisItem.Id & "_" & Last(
+                                                                            Split(
+                                                                                First(
+                                                                                    SortByColumns(
+                                                                                        Filter(
+                                                                                            Col_NumberOfAddedSKUs,
+                                                                                            Id = ThisItem.Id
+                                                                                        ),
+                                                                                        "SndID",
+                                                                                        SortOrder.Descending
+                                                                                    )
+                                                                                ).SndID,
+                                                                                "_"
+                                                                            )
+                                                                        ).Value + 1
+                                                                    }
+                                                                )
+                                                            Visible: =!IsBlank(ThisItem.sku)
+                                                            Width: =28
+                                                            X: =260
+                                                            ZIndex: =3
+
+                                                        Icon8_10 As icon.Cancel:
+                                                            AlignInContainer: =AlignInContainer.Center
+                                                            BorderColor: =RGBA(131, 24, 75, 1)
+                                                            Color: =RGBA(192, 0, 0, 1)
+                                                            DisabledBorderColor: =RGBA(166, 166, 166, 1)
+                                                            DisabledColor: =RGBA(244, 244, 244, 1)
+                                                            Height: =20
+                                                            Icon: =Icon.Cancel
+                                                            OnSelect: =Remove(Col_NumberOfAddedSKUs,ThisItem)
+                                                            Visible: |-
+                                                                =First(
+                                                                    SortByColumns(
+                                                                        Filter(
+                                                                            Col_NumberOfAddedSKUs,
+                                                                            Id = ThisItem.Id
+                                                                        ),
+                                                                        "SndID",
+                                                                        SortOrder.Ascending
+                                                                    )
+                                                                ).SndID <> ThisItem.SndID
+                                                            Width: =28
+                                                            X: =290
+                                                            ZIndex: =4
+
                                         Icon8_2 As icon.Cancel:
                                             BorderColor: =RGBA(131, 24, 75, 1)
                                             Color: =RGBA(153, 5, 32, 1)
