--- a/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In-Call Sampling Screen.fx.yaml
@@ -3316,7 +3316,7 @@
                                             DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                             DisabledColor: =RGBA(166, 166, 166, 1)
                                             DisabledFill: =RGBA(244, 244, 244, 1)
-                                            DisplayFields: =["ulchef_name"]
+                                            DisplayFields: =["statecode"]
                                             Height: =28
                                             HoverColor: =RGBA(0, 0, 0, 1)
                                             HoverFill: =RGBA(255, 211, 205, 1)
@@ -3325,8 +3325,8 @@
                                             OnSelect: =Select(Parent)
                                             PressedColor: =RGBA(255, 255, 255, 1)
                                             PressedFill: =RGBA(131, 24, 75, 1)
-                                            SearchFields: =["ulchef_name"]
-                                            SearchItems: =Search(_Col_AllSKUs,ComboBox4_4.SearchText,"ulchef_name")
+                                            SearchFields: =["statecode"]
+                                            SearchItems: =Search(_Col_AllSKUs,ComboBox4_4.SearchText,"statecode")
                                             SelectionFill: =RGBA(211, 66, 9, 1)
                                             SelectMultiple: =false
                                             Size: =10
@@ -3422,7 +3422,7 @@
                                                     DisabledBorderColor: =RGBA(166, 166, 166, 1)
                                                     DisabledColor: =RGBA(166, 166, 166, 1)
                                                     DisabledFill: =RGBA(244, 244, 244, 1)
-                                                    DisplayFields: =["ulchef_name"]
+                                                    DisplayFields: =["statecode"]
                                                     Height: =28
                                                     HoverColor: =RGBA(0, 0, 0, 1)
                                                     HoverFill: =RGBA(255, 211, 205, 1)
@@ -3431,8 +3431,8 @@
                                                     OnSelect: =Select(Parent)
                                                     PressedColor: =RGBA(255, 255, 255, 1)
                                                     PressedFill: =RGBA(131, 24, 75, 1)
-                                                    SearchFields: =["ulchef_name"]
-                                                    SearchItems: =Search(_Col_AllSKUs,ComboBox4_5.SearchText,"ulchef_name")
+                                                    SearchFields: =["statecode"]
+                                                    SearchItems: =Search(_Col_AllSKUs,ComboBox4_5.SearchText,"statecode")
                                                     SelectionFill: =RGBA(211, 66, 9, 1)
                                                     SelectMultiple: =false
                                                     Size: =10
@@ -3848,7 +3848,7 @@
                                             PressedColor: =RGBA(255, 255, 255, 1)
                                             PressedFill: =RGBA(106, 122, 127, 1)
                                             SearchFields: =["Value"]
-                                            SearchItems: =[]
+                                            SearchItems: =Choices(CallType_Incall,ComboBox3_13.SearchText)
                                             SelectionFill: =RGBA(255, 255, 255, 1)
                                             SelectMultiple: =false
                                             Size: =10
