--- a/UFS-DC-Chef-CRM-App/CanvasManifest.json
+++ b/UFS-DC-Chef-CRM-App/CanvasManifest.json
@@ -23,7 +23,7 @@
       "cdsdataformatting": false,
       "classiccontrols": false,
       "consistentreturnschemafortabularfunctions": true,
-      "copyandmerge": true,
+      "copyandmerge": false,
       "dataflowanalysisenabled": false,
       "datatablev2control": true,
       "dataverseactionsenabled": true,
@@ -102,7 +102,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 165,
+    "BindingErrorCount": 158,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 2000,
     "DocumentAppType": "DesktopOrTablet",
@@ -118,13 +118,13 @@
     "Id": "3c1f32b8-196a-44f9-859f-273004207f15",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "UFS DC Chef CRM App - (GIT) - 12-03-24",
+    "Name": "UFS DC Chef CRM App - V2",
     "OriginatingVersion": "1.334",
     "ParserErrorCount": 4,
     "ShowStatusBar": true
   },
   "PublishInfo": {
-    "AppName": "UFS DC Chef CRM App - (GIT) - 12-03-24",
+    "AppName": "UFS DC Chef CRM App - V2",
     "BackgroundColor": "rgba(255, 255, 255, 1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "",
