--- a/UFS-DC-Chef-CRM-App/Src/App.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/App.fx.yaml
@@ -4,7 +4,11 @@ App As appinfo:
         =fxInCallFromCustomer = 'Side Bar Component_8'.OnSelect;
         fxScreenName = 'Side Bar Component_8'.ScreenName;
     OnStart: |+
-        =ClearCollect(
+        =Set(var_ClickIncall,false);
+        Set(Var_viewCustomerdetails,false);
+        Set(var_routeplannerloaderspinner,true);
+        Set(var_routescreen,false);
+        ClearCollect(
             colTabs,
             {
                 ID: 1,
@@ -161,10 +165,7 @@ App As appinfo:
             _C_AllMasterSKUs,
             SKUS
         );
-        Set(var_ClickIncall,false);
-        Set(Var_viewCustomerdetails,false);
-        Set(var_routeplannerloaderspinner,true);
-        Set(var_routescreen,false)
+        
         Set(
             var_ModuleHeaderColor,
             RGBA(
