--- a/UFS-DC-Chef-CRM-App/Src/In Call Screen.fx.yaml
+++ b/UFS-DC-Chef-CRM-App/Src/In Call Screen.fx.yaml
@@ -42,6 +42,14 @@
         Reset(Dropdown1_5);
         Reset(Dropdown1_6));
         If(gblLastScreen = "RoutePlanEditCall",ClearCollect(Col_CallObjectives,{Id:1,Object:""}));
+        ClearCollect(col_allSKUs_duplicate,_Col_AllSKUs);
+        ForAll(
+            Col_NumberOfAddedSKUs As _c_sku,
+            RemoveIf(
+                col_allSKUs_duplicate,
+                _c_sku.sku = Name
+            )
+        );
 
     ScreenContainer3 As groupContainer.verticalAutoLayoutContainer:
         Height: =Parent.Height
@@ -2372,7 +2380,7 @@
                                                                 HoverColor: =RGBA(0, 0, 0, 1)
                                                                 HoverFill: =RGBA(214, 221, 224, 1)
                                                                 IsSearchable: =false
-                                                                Items: =SortByColumns(_Col_AllSKUs,"ulchef_name",SortOrder.Ascending)
+                                                                Items: =SortByColumns(col_allSKUs_duplicate,"ulchef_name",SortOrder.Ascending)
                                                                 OnChange: |
                                                                     =Patch(
                                                                         Col_NumberOfAddedSKUs,
@@ -2382,11 +2390,13 @@
                                                                         ),
                                                                         {
                                                                             sku: Self.Selected.Name,
-                                                                            DishType:  Dropdown4.Selected.Value, //FeedBackTxtInput.Text,
+                                                                            DishType: Dropdown4.Selected.Value,
+                                                                            //FeedBackTxtInput.Text,
                                                                             PackSize: Self.Selected.'Pack Size',
                                                                             PiecePrice: Self.Selected.'Piece Price',
                                                                             CasePrice: Self.Selected.'Case Price',
-                                                                            Type: Dropdown4.Selected.Value, //Self.Selected.Type,
+                                                                            Type: Dropdown4.Selected.Value,
+                                                                            //Self.Selected.Type,
                                                                             dish: If(
                                                                                 ComboBox4_2.Selected.Name = "Other",
                                                                                 TextInput4_4.Text,
@@ -2394,10 +2404,18 @@
                                                                             )
                                                                         }
                                                                     );
+                                                                    ClearCollect(col_allSKUs_duplicate,_Col_AllSKUs);
+                                                                    ForAll(
+                                                                        Col_NumberOfAddedSKUs As _c_sku,
+                                                                        RemoveIf(
+                                                                            col_allSKUs_duplicate,
+                                                                            _c_sku.sku = Name
+                                                                        )
+                                                                    );
                                                                 PressedColor: =RGBA(255, 255, 255, 1)
                                                                 PressedFill: =RGBA(106, 122, 127, 1)
                                                                 SearchFields: =["ulchef_name"]
-                                                                SearchItems: =[]
+                                                                SearchItems: =Search(SortByColumns(col_allSKUs_duplicate,"ulchef_name",SortOrder.Ascending),ComboBox7_3.SearchText,"ulchef_name")
                                                                 SelectionFill: =RGBA(214, 221, 224, 1)
                                                                 SelectMultiple: =false
                                                                 Size: =10
@@ -4833,4 +4851,14 @@
                 X: =1227
                 Y: =35
                 ZIndex: =4
+
+    Label7 As label:
+        BorderColor: =RGBA(131, 24, 75, 1)
+        Color: =RGBA(0, 0, 0, 1)
+        DisabledColor: =RGBA(166, 166, 166, 1)
+        Size: =13
+        Text: =CountRows(_Col_AllSKUs)
+        X: =171
+        Y: =12
+        ZIndex: =3
 
